Backport to Java 1.4