@@ -9,7 +9,7 @@ public class Squares implements Square {
    private final long[] bitmaps = new long[64];
    private final int[] bitmapsDeBruijnIndex = new int[64];
    private final String[] squareNames = new String[64];
-   private final Map<String, Long> bitmapsMap;
+   private final Map bitmapsMap;
 //   private final Map<Long, String> squareNameMap;
 
    private Squares() {     
@@ -165,78 +165,78 @@ public class Squares implements Square {
       
       
       
-      this.bitmapsMap= new HashMap<String, Long>();
-      this.bitmapsMap.put("A1", Long.valueOf(Square._A1));
-      this.bitmapsMap.put("A2", Long.valueOf(Square._A2));
-      this.bitmapsMap.put("A3", Long.valueOf(Square._A3));
-      this.bitmapsMap.put("A4", Long.valueOf(Square._A4));
-      this.bitmapsMap.put("A5", Long.valueOf(Square._A5));
-      this.bitmapsMap.put("A6", Long.valueOf(Square._A6));
-      this.bitmapsMap.put("A7", Long.valueOf(Square._A7));
-      this.bitmapsMap.put("A8", Long.valueOf(Square._A8));
+      this.bitmapsMap= new HashMap();
+      this.bitmapsMap.put("A1", new Long(Square._A1));
+      this.bitmapsMap.put("A2", new Long(Square._A2));
+      this.bitmapsMap.put("A3", new Long(Square._A3));
+      this.bitmapsMap.put("A4", new Long(Square._A4));
+      this.bitmapsMap.put("A5", new Long(Square._A5));
+      this.bitmapsMap.put("A6", new Long(Square._A6));
+      this.bitmapsMap.put("A7", new Long(Square._A7));
+      this.bitmapsMap.put("A8", new Long(Square._A8));
 
-      this.bitmapsMap.put("B1", Long.valueOf(Square._B1));
-      this.bitmapsMap.put("B2", Long.valueOf(Square._B2));
-      this.bitmapsMap.put("B3", Long.valueOf(Square._B3));
-      this.bitmapsMap.put("B4", Long.valueOf(Square._B4));
-      this.bitmapsMap.put("B5", Long.valueOf(Square._B5));
-      this.bitmapsMap.put("B6", Long.valueOf(Square._B6));
-      this.bitmapsMap.put("B7", Long.valueOf(Square._B7));
-      this.bitmapsMap.put("B8", Long.valueOf(Square._B8));
+      this.bitmapsMap.put("B1", new Long(Square._B1));
+      this.bitmapsMap.put("B2", new Long(Square._B2));
+      this.bitmapsMap.put("B3", new Long(Square._B3));
+      this.bitmapsMap.put("B4", new Long(Square._B4));
+      this.bitmapsMap.put("B5", new Long(Square._B5));
+      this.bitmapsMap.put("B6", new Long(Square._B6));
+      this.bitmapsMap.put("B7", new Long(Square._B7));
+      this.bitmapsMap.put("B8", new Long(Square._B8));
 
-      this.bitmapsMap.put("C1", Long.valueOf(Square._C1));
-      this.bitmapsMap.put("C2", Long.valueOf(Square._C2));
-      this.bitmapsMap.put("C3", Long.valueOf(Square._C3));
-      this.bitmapsMap.put("C4", Long.valueOf(Square._C4));
-      this.bitmapsMap.put("C5", Long.valueOf(Square._C5));
-      this.bitmapsMap.put("C6", Long.valueOf(Square._C6));
-      this.bitmapsMap.put("C7", Long.valueOf(Square._C7));
-      this.bitmapsMap.put("C8", Long.valueOf(Square._C8));
+      this.bitmapsMap.put("C1", new Long(Square._C1));
+      this.bitmapsMap.put("C2", new Long(Square._C2));
+      this.bitmapsMap.put("C3", new Long(Square._C3));
+      this.bitmapsMap.put("C4", new Long(Square._C4));
+      this.bitmapsMap.put("C5", new Long(Square._C5));
+      this.bitmapsMap.put("C6", new Long(Square._C6));
+      this.bitmapsMap.put("C7", new Long(Square._C7));
+      this.bitmapsMap.put("C8", new Long(Square._C8));
 
-      this.bitmapsMap.put("D1", Long.valueOf(Square._D1));
-      this.bitmapsMap.put("D2", Long.valueOf(Square._D2));
-      this.bitmapsMap.put("D3", Long.valueOf(Square._D3));
-      this.bitmapsMap.put("D4", Long.valueOf(Square._D4));
-      this.bitmapsMap.put("D5", Long.valueOf(Square._D5));
-      this.bitmapsMap.put("D6", Long.valueOf(Square._D6));
-      this.bitmapsMap.put("D7", Long.valueOf(Square._D7));
-      this.bitmapsMap.put("D8", Long.valueOf(Square._D8));
+      this.bitmapsMap.put("D1", new Long(Square._D1));
+      this.bitmapsMap.put("D2", new Long(Square._D2));
+      this.bitmapsMap.put("D3", new Long(Square._D3));
+      this.bitmapsMap.put("D4", new Long(Square._D4));
+      this.bitmapsMap.put("D5", new Long(Square._D5));
+      this.bitmapsMap.put("D6", new Long(Square._D6));
+      this.bitmapsMap.put("D7", new Long(Square._D7));
+      this.bitmapsMap.put("D8", new Long(Square._D8));
 
-      this.bitmapsMap.put("E1", Long.valueOf(Square._E1));
-      this.bitmapsMap.put("E2", Long.valueOf(Square._E2));
-      this.bitmapsMap.put("E3", Long.valueOf(Square._E3));
-      this.bitmapsMap.put("E4", Long.valueOf(Square._E4));
-      this.bitmapsMap.put("E5", Long.valueOf(Square._E5));
-      this.bitmapsMap.put("E6", Long.valueOf(Square._E6));
-      this.bitmapsMap.put("E7", Long.valueOf(Square._E7));
-      this.bitmapsMap.put("E8", Long.valueOf(Square._E8));
+      this.bitmapsMap.put("E1", new Long(Square._E1));
+      this.bitmapsMap.put("E2", new Long(Square._E2));
+      this.bitmapsMap.put("E3", new Long(Square._E3));
+      this.bitmapsMap.put("E4", new Long(Square._E4));
+      this.bitmapsMap.put("E5", new Long(Square._E5));
+      this.bitmapsMap.put("E6", new Long(Square._E6));
+      this.bitmapsMap.put("E7", new Long(Square._E7));
+      this.bitmapsMap.put("E8", new Long(Square._E8));
 
-      this.bitmapsMap.put("F1", Long.valueOf(Square._F1));
-      this.bitmapsMap.put("F2", Long.valueOf(Square._F2));
-      this.bitmapsMap.put("F3", Long.valueOf(Square._F3));
-      this.bitmapsMap.put("F4", Long.valueOf(Square._F4));
-      this.bitmapsMap.put("F5", Long.valueOf(Square._F5));
-      this.bitmapsMap.put("F6", Long.valueOf(Square._F6));
-      this.bitmapsMap.put("F7", Long.valueOf(Square._F7));
-      this.bitmapsMap.put("F8", Long.valueOf(Square._F8));
+      this.bitmapsMap.put("F1", new Long(Square._F1));
+      this.bitmapsMap.put("F2", new Long(Square._F2));
+      this.bitmapsMap.put("F3", new Long(Square._F3));
+      this.bitmapsMap.put("F4", new Long(Square._F4));
+      this.bitmapsMap.put("F5", new Long(Square._F5));
+      this.bitmapsMap.put("F6", new Long(Square._F6));
+      this.bitmapsMap.put("F7", new Long(Square._F7));
+      this.bitmapsMap.put("F8", new Long(Square._F8));
 
-      this.bitmapsMap.put("G1", Long.valueOf(Square._G1));
-      this.bitmapsMap.put("G2", Long.valueOf(Square._G2));
-      this.bitmapsMap.put("G3", Long.valueOf(Square._G3));
-      this.bitmapsMap.put("G4", Long.valueOf(Square._G4));
-      this.bitmapsMap.put("G5", Long.valueOf(Square._G5));
-      this.bitmapsMap.put("G6", Long.valueOf(Square._G6));
-      this.bitmapsMap.put("G7", Long.valueOf(Square._G7));
-      this.bitmapsMap.put("G8", Long.valueOf(Square._G8));
+      this.bitmapsMap.put("G1", new Long(Square._G1));
+      this.bitmapsMap.put("G2", new Long(Square._G2));
+      this.bitmapsMap.put("G3", new Long(Square._G3));
+      this.bitmapsMap.put("G4", new Long(Square._G4));
+      this.bitmapsMap.put("G5", new Long(Square._G5));
+      this.bitmapsMap.put("G6", new Long(Square._G6));
+      this.bitmapsMap.put("G7", new Long(Square._G7));
+      this.bitmapsMap.put("G8", new Long(Square._G8));
 
-      this.bitmapsMap.put("H1", Long.valueOf(Square._H1));
-      this.bitmapsMap.put("H2", Long.valueOf(Square._H2));
-      this.bitmapsMap.put("H3", Long.valueOf(Square._H3));
-      this.bitmapsMap.put("H4", Long.valueOf(Square._H4));
-      this.bitmapsMap.put("H5", Long.valueOf(Square._H5));
-      this.bitmapsMap.put("H6", Long.valueOf(Square._H6));
-      this.bitmapsMap.put("H7", Long.valueOf(Square._H7));
-      this.bitmapsMap.put("H8", Long.valueOf(Square._H8));
+      this.bitmapsMap.put("H1", new Long(Square._H1));
+      this.bitmapsMap.put("H2", new Long(Square._H2));
+      this.bitmapsMap.put("H3", new Long(Square._H3));
+      this.bitmapsMap.put("H4", new Long(Square._H4));
+      this.bitmapsMap.put("H5", new Long(Square._H5));
+      this.bitmapsMap.put("H6", new Long(Square._H6));
+      this.bitmapsMap.put("H7", new Long(Square._H7));
+      this.bitmapsMap.put("H8", new Long(Square._H8));
    }
 
    public static Square create() {
