@@ -3,15 +3,15 @@ package org.forritan.talvmenni.search;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
 
 import org.forritan.talvmenni.evaluation.Evaluation;
 import org.forritan.talvmenni.game.Position;
 import org.forritan.talvmenni.game.AbstractPosition;
 import org.forritan.talvmenni.game.Transposition;
+import org.forritan.talvmenni.game.Transposition.ThreeTuplePlyScoreMoves;
 import org.forritan.talvmenni.game.Position.Move;
-import org.forritan.util.ThreeTuple;
-import org.forritan.util.Tuple;
 
 
 public class AlphaBetaWithTranspositionTableSearch implements Search {
@@ -59,7 +59,7 @@ public class AlphaBetaWithTranspositionTableSearch implements Search {
       return this.debugInfo;
    }
 
-   public List<Move> getBestMoves(
+   public List getBestMoves(
          Position p,
          Evaluation e,
          boolean whiteMove) {
@@ -77,7 +77,7 @@ public class AlphaBetaWithTranspositionTableSearch implements Search {
       // If checkmate there is no need to search further...
       int beta= Evaluation.CHECKMATE_SCORE;
 
-      Tuple<Integer, List<Move>> result= this.alphaBeta(
+      TupleScoreMoves result= this.alphaBeta(
             p,
             e,
             whiteMove,
@@ -90,17 +90,17 @@ public class AlphaBetaWithTranspositionTableSearch implements Search {
       this.debugInfo.postNodesPerSecond(
             time,
             this.movesSearched);
-      this.debugInfo.postBestMoves(result.b.size() > 0 ? result.b.subList(
+      this.debugInfo.postBestMoves(result.moves.size() > 0 ? result.moves.subList(
             0,
-            1) : result.b);
+            1) : result.moves);
       this.debugInfo.postTranspositionHits(this.transpositionHits);
 
-      return (result.b.size() > 0 ? result.b.subList(
+      return (result.moves.size() > 0 ? result.moves.subList(
             0,
-            1) : result.b);
+            1) : result.moves);
    }
 
-   private Tuple<Integer, List<Move>> alphaBeta(
+   private TupleScoreMoves alphaBeta(
          Position p,
          Evaluation e,
          boolean whiteMove,
@@ -108,34 +108,34 @@ public class AlphaBetaWithTranspositionTableSearch implements Search {
          int alpha,
          int beta) {
 
-      Tuple<Integer, List<Move>> result= null;
+      TupleScoreMoves result= null;
 
       if (this.transposition.contains(
             p,
             whiteMove)) {
-         ThreeTuple<Integer, Integer, List<Move>> entry= this.transposition
+         ThreeTuplePlyScoreMoves entry= this.transposition
                .get(
                      p,
                      whiteMove);
-         if (entry.a.intValue() >= ply) {
+         if (entry.ply.intValue() >= ply) {
             this.transpositionHits++;
-            List<Move> moves= new ArrayList<Move>();
-            moves.addAll(entry.c);
-            return new Tuple<Integer, List<Move>>(
-                  entry.b,
+            List moves= new ArrayList();
+            moves.addAll(entry.moves);
+            return new TupleScoreMoves(
+                  entry.score,
                   moves);
          }
       }
 
       if (ply == 0) {
-         result= new Tuple<Integer, List<Move>>(
-               Integer.valueOf((e.getScore(p) * (whiteMove ? 1 : -1))),
-               new ArrayList<Move>());
+         result= new TupleScoreMoves(
+               new Integer((e.getScore(p) * (whiteMove ? 1 : -1))),
+               new ArrayList());
       } else {
-         List<Move> moves;
-         Tuple<Integer, List<Move>> best= new Tuple<Integer, List<Move>>(
-               Integer.valueOf(Integer.MIN_VALUE + 1),
-               new ArrayList<Move>());
+         List moves;
+         TupleScoreMoves best= new TupleScoreMoves(
+               new Integer(Integer.MIN_VALUE + 1),
+               new ArrayList());
 
          if (whiteMove) {
             moves= p.getWhite().getPossibleMoves();
@@ -144,8 +144,9 @@ public class AlphaBetaWithTranspositionTableSearch implements Search {
          }
 
          if (moves.size() > 0) {
-            for (Move move : moves) {
-               if (best.a.intValue() >= beta) {
+            for (Iterator it= moves.iterator(); it.hasNext();) {
+                  Move move= (Move) it.next();
+               if (best.score.intValue() >= beta) {
                   break;
                }
                this.movesSearched++;
@@ -155,10 +156,10 @@ public class AlphaBetaWithTranspositionTableSearch implements Search {
                p= p.move(
                      move.from,
                      move.to);
-               if (best.a.intValue() > alpha) {
-                  alpha= best.a.intValue();
+               if (best.score.intValue() > alpha) {
+                  alpha= best.score.intValue();
                }
-               Tuple<Integer, List<Move>> value= alphaBeta(
+               TupleScoreMoves value= alphaBeta(
                      p,
                      e,
                      !whiteMove,
@@ -166,18 +167,18 @@ public class AlphaBetaWithTranspositionTableSearch implements Search {
                      -beta,
                      -alpha);
                p.popMove();
-               value.a= Integer.valueOf(value.a.intValue()
+               value.score= new Integer(value.score.intValue()
                      * -1);
-               value.b.add(
+               value.moves.add(
                      0,
                      move);
                moveTime+= System.currentTimeMillis();
 
-               if (value.a.intValue() > best.a.intValue()) {
+               if (value.score.intValue() > best.score.intValue()) {
 
-                  best.a= value.a;
-                  best.b.clear();
-                  best.b.addAll(value.b);
+                  best.score= value.score;
+                  best.moves.clear();
+                  best.moves.addAll(value.moves);
 
                   if (this.useMoveOrdering) {
                      if (whiteMove) {
@@ -191,14 +192,14 @@ public class AlphaBetaWithTranspositionTableSearch implements Search {
                   if (ply == this.ply) {
                      this.debugInfo.postCurrentBestMove(
                            move,
-                           best.a.intValue(),
+                           best.score.intValue(),
                            (this.movesSearched - movesSearchedBefore));
                      this.thinking.postThinking(
                            ply,
-                           (best.a.intValue() * (whiteMove ? 1 : -1)),
+                           (best.score.intValue() * (whiteMove ? 1 : -1)),
                            moveTime + 1,
                            (this.movesSearched - movesSearchedBefore),
-                           best.b.toString());
+                           best.moves.toString());
                   }
                }
             }
@@ -209,25 +210,25 @@ public class AlphaBetaWithTranspositionTableSearch implements Search {
             }
 
             if (result == null) {
-               result= new Tuple<Integer, List<Move>>(
-                     Integer.valueOf(0),
-                     new ArrayList<Move>());
+               result= new TupleScoreMoves(
+                     new Integer(0),
+                     new ArrayList());
             }
-            result.a= best.a;
-            result.b.clear();
-            result.b.addAll(best.b);
+            result.score= best.score;
+            result.moves.clear();
+            result.moves.addAll(best.moves);
 
          } else {
             if (whiteMove ? p.getWhite().isChecked() : p.getBlack().isChecked()) {
                // Checkmate...
-               result= new Tuple<Integer, List<Move>>(
-                     Integer.valueOf(((-Evaluation.CHECKMATE_SCORE - ply))),
-                     new ArrayList<Move>());
+               result= new TupleScoreMoves(
+                     new Integer(((-Evaluation.CHECKMATE_SCORE - ply))),
+                     new ArrayList());
             } else {
                // Stalemate...
-               result= new Tuple<Integer, List<Move>>(
-                     Integer.valueOf(0),
-                     new ArrayList<Move>());
+               result= new TupleScoreMoves(
+                     new Integer(0),
+                     new ArrayList());
             }
          }
       }
@@ -235,8 +236,8 @@ public class AlphaBetaWithTranspositionTableSearch implements Search {
       this.transposition.update(
             p,
             whiteMove,
-            result.b,
-            result.a.intValue(),
+            result.moves,
+            result.score.intValue(),
             ply);
 
       return result;
